Changed authors for index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ MathJax.Hub.Config({
             <div class="title headtext">
                 <h1><span class="title-line" style="font-size:150%;">TOUGH CROWD</span></h1>
                  <h4><span class="title-line" style="font-size:150%;">A DEEP DIVE INTO BUSINESS DYNAMICS</span></h4>
-                <h5><span class="title-line">by DAVE GOODSMITH, DATASCIENCE.COM</span></h5>
+                <h5><span class="title-line">by GUO LIU AND DAVE GOODSMITH, DATASCIENCE.COM</span></h5>
                 <h5><span class="title-line">edited by JEFF CHEN, COMMERCE DATA SERVICE</span></h5>
                 <h5><span class="title-line">SEPTEMBER 2016</span></h5>
             </div>
